--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 alert(`Sobrepeso: ${calc}`)
             }
             else if (calc >= 30 && calc < 39.0){
-                alert(`Obesidade II`)
+                alert(`Obesidade II: ${calc}`)
             }
             else if (calc > 40){
-                alert(`Obesidade III(grave)`)
+                alert(`Obesidade III(grave): ${calc}`)
             }
         }
     </script>
